# LMBroker

./: .gitignore  CMakeLists.txt  README.md
config/: broker.conf.example
docs/: architecture.md  getting-started.md
include/api/: alerter.h  metrics.h  rest_api.h
include/broker/: broker.h  connection.h  framing.h  protocol.h  thread_pool.h  virtual_license.h
include/common/: config.h  config_reloader.h  logger.h
include/health/: health_monitor.h
include/pool/: lmutil_wrapper.h  pool_manager.h
include/tracker/: db_connection.h  usage_tracker.h
scripts/: build.sh  fetch_deps.sh  migrate.sh  run_tests.sh  setup_db.sh
sql/: 000_migrations.sql  001_initial_schema.sql  001_schema.sql  002_checkout_duration_view.sql  003_add_vendor_queued_to_features.sql
src/: main.cpp
src/api/: CMakeLists.txt  alerter.cpp  metrics.cpp  rest_api.cpp
src/broker/: CMakeLists.txt  broker.cpp  connection.cpp  framing.cpp  protocol.cpp  thread_pool.cpp  virtual_license.cpp
src/common/: CMakeLists.txt  config.cpp  config_reloader.cpp  logger.cpp
src/health/: CMakeLists.txt  health_monitor.cpp
src/pool/: CMakeLists.txt  lmutil_wrapper.cpp  pool_manager.cpp
src/tracker/: CMakeLists.txt  db_connection.cpp  usage_tracker.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_db_connection.cpp  test_pool_api.cpp  test_tracker.cpp
tests/unit/: CMakeLists.txt  test_alerter.cpp  test_config_diff.cpp  test_config_parser.cpp  test_config_reloader.cpp  test_framing.cpp  test_lmutil_parser.cpp  test_metrics.cpp  test_protocol.cpp  test_thread_pool.cpp  test_virtual_license.cpp
